[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-cli"
version = "0.1.0"
description = "Personal CLI toolkit — mail, calendar, tasks, and more"
requires-python = ">=3.10"
license = "MIT"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
my = "my_cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
