[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mxctl"
version = "0.3.0"
description = "Apple Mail from your terminal"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Jscoats"}]

[project.urls]
Homepage = "https://github.com/Jscoats/mxctl"
Repository = "https://github.com/Jscoats/mxctl"
Issues = "https://github.com/Jscoats/mxctl/issues"

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mxctl = "mxctl.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mxctl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
